--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "Export Lautman Courses",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "Add the ability to export your bid-it schedule in a way easily pasteable to the Lautman forms.",
     "manifest_version": 3,
     "author": "yoga",
     "icons": {"128": "export.png" },
     "content_scripts": [
         {
-            "matches": ["https://bid-it.appspot.com/"],
+            "matches": ["https://bid-it.appspot.com/", "http://bid-it.appspot.com/"],
             "js": ["tab_script.js"]
         }
     ]
